--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>spectrum</artifactId>
-    <version>1.1.1</version>
+    <version>1.1.2-SNAPSHOT</version>
     <name>Spectrum</name>
     <description>WebJar for Spectrum</description>
     <url>http://webjars.org</url>
@@ -36,7 +36,7 @@
         <url>http://github.com/webjars/spectrum</url>
         <connection>scm:git:https://github.com/webjars/spectrum.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/spectrum.git</developerConnection>
-        <tag>spectrum-1.1.1</tag>
+        <tag>HEAD</tag>
     </scm>
     
     <properties>
