--- a/pom.xml
+++ b/pom.xml
@@ -11,16 +11,16 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>spectrum</artifactId>
-    <version>1.6.1-SNAPSHOT</version>
+    <version>1.7.0</version>
     <name>Spectrum</name>
     <description>WebJar for Spectrum</description>
     <url>http://webjars.org</url>
 
     <developers>
         <developer>
-            <id>jamesward</id>
-            <name>James Ward</name>
-            <email>james@jamesward.com</email>
+            <id>yiyang00171</id>
+            <name>Jason Zhang</name>
+            <email>jason.dev.zhang@gmail.com</email>
         </developer>
     </developers>
 
@@ -36,12 +36,12 @@
         <url>http://github.com/webjars/spectrum</url>
         <connection>scm:git:https://github.com/webjars/spectrum.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/spectrum.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>spectrum-1.7.0</tag>
     </scm>
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <upstream.version>1.6.0</upstream.version>
+        <upstream.version>1.7.0</upstream.version>
         <upstream.url>https://github.com/bgrins/spectrum/archive</upstream.url>
         <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${upstream.version}</destDir>
         <requirejs>
