--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
     
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
-    <artifactId>spectrum</artifactId>
-    <version>2.0.5</version>
+    <artifactId>spectrum-seballot</artifactId>
+    <version>2.0.5-SNAPSHOT</version>
     <name>Spectrum</name>
-    <description>WebJar for Spectrum</description>
+    <description>WebJar for Spectrum (seballot fork)</description>
     <url>http://webjars.org</url>
 
     <developers>
@@ -32,15 +32,15 @@
     <licenses>
         <license>
             <name>Copyright (c) 2013, Brian Grinstead</name>
-            <url>https://github.com/bgrins/spectrum/blob/master/LICENSE</url>
+            <url>https://github.com/bgrins/spectrum-seballot/blob/master/LICENSE</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
 
     <scm>
-        <url>http://github.com/webjars/spectrum</url>
-        <connection>scm:git:https://github.com/webjars/spectrum.git</connection>
-        <developerConnection>scm:git:https://github.com/webjars/spectrum.git</developerConnection>
+        <url>http://github.com/webjars/spectrum-seballot</url>
+        <connection>scm:git:https://github.com/webjars/spectrum-seballot.git</connection>
+        <developerConnection>scm:git:https://github.com/webjars/spectrum-seballot.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
     
@@ -90,7 +90,7 @@
                                 <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
                                 <echo message="moving resources" />
                                 <move todir="${destDir}">
-                                    <fileset dir="${project.build.directory}/spectrum-${upstream.version}" includes="spectrum* i18n/" />
+                                    <fileset dir="${project.build.directory}/spectrum-${upstream.version}/dist"/>
                                 </move>
                             </target>
                         </configuration>
