--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>spectrum-seballot</artifactId>
-    <version>2.0.5-SNAPSHOT</version>
+    <version>2.0.5</version>
     <name>Spectrum</name>
     <description>WebJar for Spectrum (seballot fork)</description>
     <url>http://webjars.org</url>
@@ -41,7 +41,7 @@
         <url>http://github.com/webjars/spectrum-seballot</url>
         <connection>scm:git:https://github.com/webjars/spectrum-seballot.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/spectrum-seballot.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>spectrum-seballot-2.0.5</tag>
     </scm>
     
     <properties>
@@ -90,7 +90,7 @@
                                 <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
                                 <echo message="moving resources" />
                                 <move todir="${destDir}">
-                                    <fileset dir="${project.build.directory}/spectrum-${upstream.version}/dist"/>
+                                    <fileset dir="${project.build.directory}/spectrum-${upstream.version}/dist" />
                                 </move>
                             </target>
                         </configuration>
